@@ -31,6 +31,9 @@
 - SystemTap colors can now be turned off by simply setting
   SYSTEMTAP_COLORS to be empty, rather than having to make it invalid.
 
+- There is a new context tapset function, pplabel(), which returns the
+  name of the label which fired.
+
 * What's new in version 2.4, 2013-11-06
 
 - Better suggestions are given in many of the semantic errors in which
